# salesfunnel-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: admin.py  auth.py  category.py  (+4 more)
app/core/: config.py  database.py  dependencies.py  helpers.py  security.py
app/models/: audit_log.py  cart.py  category.py  distributor_profile.py  notification.py  order.py  order_item.py  payment.py  product.py  user.py  wallet.py  wallet_transaction.py  wholesaler_profile.py
app/schemas/: __init__.py  admin.py  cart.py  category.py  distributor.py  notification.py  order.py  payment.py  product.py  user.py  wholesaler.py
app/utils/: constants.py  exceptions.py  validators.py
migrations/: env.py
migrations/versions/: 065fcd332a65_make_profile_fields_nullable.py  13a8e2c00e23_added_addtional_fields_to_payment_table.py  1f83e2730071_changed_payment_method_field_on_payment_.py  46ae0afa4e64_added_the_unique_true_parameter_on_the_.py  4734156992e8_add_subaccount_code_field_to_.py  4f4a32d860cd_changed_the_distributor_id_to_use_the_.py  5a53b863d69d_add_subaccount_code_field_to_user_table_.py  81652f91d3b1_add_wallet_and_dimensions_and_dedicated_.py  9b7ce9233aa7_make_delivery_address_nullable.py  9e870bc468b9_removed_unecessary_fields_from_payment_.py  b0b1edd8a926_updates_some_stuff_in_the_payment_table.py  c987603e8668_add_category_table_and_relationship.py  d3bf3fdda524_added_field_is_deleted.py  d87f9efd071a_fix_delivery_fields_in_orders_table.py  (+1 more)
scripts/: init_db.py  monitoring.py  seed_data.py
(+8 files in other folders)
